--- a/package.json
+++ b/package.json
@@ -11,14 +11,23 @@
   },
   "dependencies": {
     "@react-oauth/google": "^0.12.1",
+    "@reduxjs/toolkit": "1.9",
+    "axios": "^1.9.0",
     "jwt-decode": "^4.0.0",
+    "leaflet": "^1.9.4",
+    "leaflet-compass": "^1.5.6",
+    "leaflet.locatecontrol": "^0.84.2",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-leaflet": "^4.2.1",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.22.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
+    "@types/leaflet": "^1.9.17",
+    "@types/leaflet.locatecontrol": "^0.82.0",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
